Modified the Rmd project template

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -22,18 +22,19 @@ Make a histogram of the total number of steps taken each day
 
 ```{r histogram}
 # Histogram of number of steps taken each day
-dailyData <- ddply(data, 'date', summarise, totalSteps = sum(steps, na.rm = TRUE))
-hist(dailyData$totalSteps)
+dailyData <- ddply(data, 'date', summarise, steps = sum(steps, na.rm = TRUE))
+hist(dailyData$steps, main = 'Total number of steps each day', 
+	xlab = 'Number of steps')
 ```
 
 Calculate and report the **mean** and **median** total number of steps taken per day.
 
 ```{r meanMedian}
 # Mean steps taken each day
-mean(dailyData$totalSteps)
+mean(dailyData$steps)
 
 # Median steps taken each day
-median(dailyData$totalSteps)
+median(dailyData$steps)
 ```
 
 ## What is the average daily activity pattern?
@@ -42,16 +43,30 @@ Make a time series plot of the 5-minute interval (x-axis) and the average number
 
 ```{r averageDays}
 # Average steps taken across all days
-averageData <- ddply(data, 'interval', summarise, average = mean(steps, na.rm = TRUE))
-qplot(interval, average, data = averageData, geom = 'line')
+averageData <- ddply(data, 'interval', summarise, 
+	steps = mean(steps, na.rm = TRUE))
+qplot(interval, steps, data = averageData, geom = 'line', 
+	xlab = 'Time interval', ylab = 'Steps', 
+	main = 'Average number of steps in a day')
 ```  
 
-Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
+Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?  
+
+The interval with the maximum number of steps is
 
 ```{r maxInterval}
 # Interval with maximum number of steps
-with(averageData, interval[which.max(average)])
+(maxIntervalPosition <- which.max(averageData$steps))
 ```
+
+and this interval corresponds to the time
+
+```{r maxTime}
+# Time interval with maximum number of steps
+averageData$interval[maxIntervalPosition]
+```
+
+which is equivalent to `8:35 AM`.
 
 
 ## Imputing missing values
@@ -60,18 +75,18 @@ Calculate and report the total number of missing values in the dataset (i.e. the
 
 ```{r missingValues}
 # Total number of rows with NAs
-a <- which(complete.cases(data) == FALSE)
-length(a)
+rowsWithNA <- which(complete.cases(data) == FALSE)
+length(rowsWithNA)
 ```
 
 Devise a strategy for filling in all of the missing values in the dataset. The strategy does not need to be sophisticated. For example, you could use the mean/median for that day, or the mean for that 5-minute interval, etc.
 
 ```{r fillIntervals}
 # Intervals with missing values
-missingIntervals <- data$interval[a]
+missingIntervals <- data$interval[rowsWithNA]
 
-# Average values for missing intervals
-missingAverage <- with(averageData, average[match(missingIntervals,interval)])
+# Average step values for missing intervals
+averageSteps <- with(averageData, steps[match(missingIntervals,interval)])
 ```
 
 Create a new dataset that is equal to the original dataset but with the missing data filled in.
@@ -79,23 +94,25 @@ Create a new dataset that is equal to the original dataset but with the missing 
 ```{r filledData}
 # Fill NAs with average data
 filledData <- data
-filledData$steps[a] <- missingAverage
+filledData$steps[rowsWithNA] <- averageSteps
 ```
 
-Make a histogram of the total number of steps taken each day and Calculate and report the mean and median total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?
+Make a histogram of the total number of steps taken each day and calculate and report the mean and median total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?
 
 ```{r filledHistogram}
 # Histogram of number of steps taken each day
-newDailyData <- ddply(filledData, 'date', summarise, totalSteps = sum(steps, na.rm = TRUE))
-hist(newDailyData$totalSteps)
+newDailyData <- ddply(filledData, 'date', summarise, steps = sum(steps))
+hist(newDailyData$steps, main = 'Total number of steps each day', 
+	xlab = 'Number of steps')
 
 # Mean steps taken each day
-mean(newDailyData$totalSteps)
+mean(newDailyData$steps)
 
 # Median steps taken each day
-median(newDailyData$totalSteps)
+median(newDailyData$steps)
 ```
 
+As we can see, the new mean and median have the same value (10766), and both are larger than their previous values (mean = 9354, median = 10395). So, imputing missing data with the mean value increases the mean and median values of total daily number of steps.
 
 ## Are there differences in activity patterns between weekdays and weekends?
 
@@ -112,6 +129,13 @@ Make a panel plot containing a time series plot of the 5-minute interval (x-axis
 
 ```{r weekdayPlot}
 # Plot filled average data
-filledAverageData <- ddply(filledData, c('interval', 'day'), summarise, average = mean(steps, na.rm = TRUE))
-qplot(interval, average, data = filledAverageData, geom = 'line') + facet_wrap(~ day, ncol = 1)
+filledAverageData <- ddply(filledData, c('interval', 'day'), summarise, steps = mean(steps))
+qplot(interval, steps, data = filledAverageData, geom = 'line', 
+	xlab = 'Time interval', ylab = 'Steps', 
+	main = 'Average number of steps in a day') + 
+facet_wrap(~ day, ncol = 1)
 ```
+
+There's more activity between 5AM and 9:30AM in the weekdays than in the weekend. However, after 10AM, there's less activity in a weekday than in the weekend.  
+
+This can be explained because, during the week, people wake up early to get ready for work, then they have to go to work. This happens in the window of 5AM to 9:30AM. However, once at work, there's not much activity. On the other hand, during the weekend most people don't wake up early, and don't have to get to work; however, once they're up, they are pretty active during the day.
